<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tAL-8X-sv3">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
    </dependencies>
    <scenes>
        <!--Safari View Controller-->
        <scene sceneID="qyD-6i-Zrc">
            <objects>
                <viewController id="TUb-89-URY" customClass="SafariViewController" customModule="swift101" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="1Fs-f1-obA"/>
                        <viewControllerLayoutGuide type="bottom" id="9jO-5k-cCR"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Drq-4X-aYc">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58r-6C-Ymz">
                                <rect key="frame" x="252" y="285" width="97" height="30"/>
                                <state key="normal" title="Open Website"/>
                                <connections>
                                    <action selector="openWebSite:" destination="TUb-89-URY" eventType="touchUpInside" id="hau-Kk-n7s"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="58r-6C-Ymz" firstAttribute="centerY" secondItem="Drq-4X-aYc" secondAttribute="centerY" id="07c-vI-0Nc"/>
                            <constraint firstItem="58r-6C-Ymz" firstAttribute="centerX" secondItem="Drq-4X-aYc" secondAttribute="centerX" id="8Vh-Yf-ts6"/>
                        </constraints>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="O01-ev-N1j" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-759" y="-984"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="swift101" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2kk-7j-g7H">
                                <rect key="frame" x="180" y="28" width="240" height="128"/>
                                <color key="backgroundColor" red="0.37647058820000001" green="0.75294117650000003" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="I5y-N9-Czt"/>
                                    <constraint firstAttribute="width" constant="240" id="vHv-mb-1zp"/>
                                </constraints>
                            </view>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9aK-Re-nyR">
                                <rect key="frame" x="180" y="164" width="240" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uGL-H8-NTk">
                                <rect key="frame" x="180" y="202" width="240" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbm-MH-wui">
                                <rect key="frame" x="251" y="240" width="98" height="30"/>
                                <color key="backgroundColor" red="0.37647058820000001" green="0.75294117650000003" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="98" id="5R3-he-xOZ"/>
                                    <constraint firstAttribute="height" constant="30" id="Pfm-gm-oFM"/>
                                </constraints>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0eY-1x-mKh"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="day62" translatesAutoresizingMaskIntoConstraints="NO" id="wFW-hH-fqC">
                                <rect key="frame" x="180" y="278" width="240" height="128"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="128" id="sTZ-oV-7qL"/>
                                </constraints>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="uGL-H8-NTk" firstAttribute="width" secondItem="9aK-Re-nyR" secondAttribute="width" id="6eI-no-REI"/>
                            <constraint firstItem="wFW-hH-fqC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9fg-QY-oCo"/>
                            <constraint firstItem="uGL-H8-NTk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GSz-Jk-NJ8"/>
                            <constraint firstItem="wFW-hH-fqC" firstAttribute="top" secondItem="sbm-MH-wui" secondAttribute="bottom" constant="8" id="Hbc-tP-low"/>
                            <constraint firstItem="sbm-MH-wui" firstAttribute="top" secondItem="uGL-H8-NTk" secondAttribute="bottom" constant="8" id="J0h-r9-Pba"/>
                            <constraint firstItem="9aK-Re-nyR" firstAttribute="width" secondItem="2kk-7j-g7H" secondAttribute="width" id="JKh-LZ-OIH"/>
                            <constraint firstItem="2kk-7j-g7H" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="KJg-gC-ooV"/>
                            <constraint firstItem="uGL-H8-NTk" firstAttribute="top" secondItem="9aK-Re-nyR" secondAttribute="bottom" constant="8" id="P0u-Rl-Mqb"/>
                            <constraint firstItem="sbm-MH-wui" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bph-4c-p1c"/>
                            <constraint firstItem="wFW-hH-fqC" firstAttribute="width" secondItem="uGL-H8-NTk" secondAttribute="width" id="eAC-8d-rV8"/>
                            <constraint firstItem="9aK-Re-nyR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ipo-B4-MM6"/>
                            <constraint firstItem="2kk-7j-g7H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wJo-pd-dbZ"/>
                            <constraint firstItem="9aK-Re-nyR" firstAttribute="top" secondItem="2kk-7j-g7H" secondAttribute="bottom" constant="8" id="x5V-kF-ek0"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="blueView" destination="2kk-7j-g7H" id="mXX-nh-2ot"/>
                        <outlet property="loginButton" destination="sbm-MH-wui" id="zgS-QG-Rz1"/>
                        <outlet property="myImageView" destination="wFW-hH-fqC" id="cVE-PJ-jV8"/>
                        <outlet property="passwordTextField" destination="uGL-H8-NTk" id="rfy-5j-ShE"/>
                        <outlet property="usernameTextField" destination="9aK-Re-nyR" id="e86-Qd-j0P"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-762" y="-271"/>
        </scene>
        <!--Day36 View Controller-->
        <scene sceneID="t2B-Hm-eMX">
            <objects>
                <viewController id="tAL-8X-sv3" customClass="Day36ViewController" customModule="swift101" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ZJ6-im-RGs"/>
                        <viewControllerLayoutGuide type="bottom" id="4pa-75-c5L"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kXT-48-k4g">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fh9-el-M1X" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="67" y="-991"/>
        </scene>
        <!--Day46 View Controller-->
        <scene sceneID="IVh-nE-T6x">
            <objects>
                <viewController id="Z6Z-6s-DPM" customClass="Day46ViewController" customModule="swift101" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="QaQ-7P-WBL"/>
                        <viewControllerLayoutGuide type="bottom" id="C5g-j0-cgu"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="7A1-75-vTw">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ULo-oD-rgN" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="71" y="-271"/>
        </scene>
    </scenes>
    <resources>
        <image name="day62" width="915" height="610"/>
    </resources>
</document>
